add album interface
