# controllers/ICustomer.js
@@ -3,29 +3,29 @@
 var url = require('url');
 
 
-var Customer = require('./CustomerService');
+var ICustomer = require('./ICustomerService');
 
 
 module.exports.associateUserWithWeiboIdGet = function associateUserWithWeiboIdGet (req, res, next) {
-  Customer.associateUserWithWeiboIdGet(req.swagger.params, res, next);
+  ICustomer.associateUserWithWeiboIdGet(req.swagger.params, res, next);
 };
 
 module.exports.updateUserAvatarGet = function updateUserAvatarGet (req, res, next) {
-  Customer.updateUserAvatarGet(req.swagger.params, res, next);
+  ICustomer.updateUserAvatarGet(req.swagger.params, res, next);
 };
 
 module.exports.updateUserBirthdayGet = function updateUserBirthdayGet (req, res, next) {
-  Customer.updateUserBirthdayGet(req.swagger.params, res, next);
+  ICustomer.updateUserBirthdayGet(req.swagger.params, res, next);
 };
 
 module.exports.updateUserNameGet = function updateUserNameGet (req, res, next) {
-  Customer.updateUserNameGet(req.swagger.params, res, next);
+  ICustomer.updateUserNameGet(req.swagger.params, res, next);
 };
 
 module.exports.userByIdGet = function userByIdGet (req, res, next) {
-  Customer.userByIdGet(req.swagger.params, res, next);
+  ICustomer.userByIdGet(req.swagger.params, res, next);
 };
 
 module.exports.userByWeiboIdGet = function userByWeiboIdGet (req, res, next) {
-  Customer.userByWeiboIdGet(req.swagger.params, res, next);
+  ICustomer.userByWeiboIdGet(req.swagger.params, res, next);
 };
